--- a/opdracht_02-about.html
+++ b/opdracht_02-about.html
@@ -14,7 +14,7 @@
 
           <br>
           <p>Hoi dit is de pagina waar ik iets meer over mezelf schrijf</p>
-          <p>Mijn naam is Shawn en kom uit Amsterdam</p>
+          <p>Mijn naam is Shawn en kom uit Groningen</p>
           </p>
 
           <a href="opdracht_02-links_images_lists.html">Ga terug naar de vorige pagina</a>
